# ouroboros

ouroboros/: Cargo.toml
ouroboros-praos/: Cargo.toml
ouroboros-praos/src/consensus/: mod.rs
ouroboros-praos/tests/: validation.rs
ouroboros-praos/tests/data/: test-vector.json
ouroboros/src/validator/: mod.rs
