[package]
name = "ouroboros"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
mockall = "0.13"
pallas-codec = { git = "https://github.com/txpipe/pallas", rev = "7f988a16d412d4891408f99785372a4ef617984d" }
pallas-crypto = { git = "https://github.com/txpipe/pallas", rev = "7f988a16d412d4891408f99785372a4ef617984d" }
thiserror = "1.0"
serde = { version = "1.0.210", features = ["derive"] }
async-trait = "0.1.83"

[dev-dependencies]
insta = { version = "1.40.0", features = ["yaml"] }